--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ config/database.yml
 *.log
 /tmp
 
+#Ignore precompiled assets
+public/assets/
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
 /*.iml
