--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,9 @@ config/database.yml
 # Ignore all logfiles and tempfiles.
 *.log
 /tmp
-public/assets
 
 #Ignore precompiled assets
-public/assets/
+# public/assets/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
